# COMS_5790_project2

./: QTL_test_unlabeled.tsv  README.md  main.py  pyproject.toml
